# expenditures

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  auth.py  deploy.sh  initialize-tags.py  models.py  pyproject.toml  requirements.txt  routes.py  server.py  start-dev.sh
.github/workflows/: ci.yml
Expenditures/: ionic.config.json  package-lock.json  package.json
Expenditures/public/: index.html
Expenditures/src/: App.tsx  Login.tsx  models.tsx
Expenditures/src/components/: ExpenditureEditor.tsx  ExpenditureList.tsx  NamedIcon.tsx  SummaryList.tsx
Expenditures/src/pages/: ExpenditureList.tsx  Expenditures.tsx  Home.tsx  Summary.tsx  Tags.tsx
Expenditures/src/theme/: variables.css
backend/: pyproject.toml
backend/expenditures/: app.py  models.py  routes.py  server.py
expenditures/: __main__.py  app.py  auth.py  initialize-tags.py  models.py  routes.py  server.py
frontend/: ionic.config.json  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/public/assets/icon/: site.webmanifest
frontend/src/: App.tsx  backend-hooks.ts  index.tsx  models.tsx  serviceWorkerRegistration.ts
frontend/src/components/: ExpenditureEditor.tsx  ExpenditureList.tsx  Login.tsx  NamedIcon.tsx  SummaryList.tsx
frontend/src/pages/: Expenditures.tsx  Home.tsx  Summary.tsx  Tags.tsx
